[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shreddit"
version = "6.3.2"
description = "Remove your comment history on Reddit as deleting an account does not do so."
readme = "README.md"
license = { text = "FreeBSD License" }
authors = [
    { name = "David John", email = "david@vaunt.eu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.3",
    "arrow>=1.3.0",
    "backports-abc>=0.5",
    "praw>=7.5.0",
    "PyYAML>=6.0.1",
    "requests>=2.32.4",
    "setuptools>=65.0.0",
    "six>=1.12",
    "tornado>=6.5.1",
    "prometheus-client>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/kusold/Shreddit"

[project.scripts]
shreddit = "shreddit.app:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E/W), Pyflakes (F), and isort (I) rules
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Allow magic values in tests
"tests/*" = ["PLR2004"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.hatch.build.targets.wheel]
packages = ["shreddit"]

[tool.hatch.build.targets.sdist]
include = [
    "shreddit/*.example",
]
